--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "core-js": "^2.4.1",
     "fullcalendar": "^3.4.0",
     "jquery": "^3.2.1",
+    "line-clamp": "0.0.4",
     "rxjs": "^5.1.0",
     "stickyfill": "^1.1.1",
     "zone.js": "^0.8.4"
