Setting up User update form

--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
     "angular-froala-wysiwyg": "^1.0.0",
     "angular2-token": "^0.2.0-beta.12",
     "bootstrap": "^4.0.0-alpha.6",
+    "clamp": "^1.0.1",
     "core-js": "^2.4.1",
     "fullcalendar": "^3.4.0",
     "jquery": "^3.2.1",
+    "line": "^0.1.8",
     "line-clamp": "0.0.4",
     "rxjs": "^5.1.0",
     "stickyfill": "^1.1.1",
