--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "jquery": "^3.2.1",
     "line": "^0.1.8",
     "line-clamp": "0.0.4",
+    "lodash": "^4.17.4",
     "rxjs": "^5.1.0",
     "stickyfill": "^1.1.1",
     "zone.js": "^0.8.4"
