--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "line-clamp": "0.0.4",
     "lodash": "^4.17.4",
     "ng2-fittext": "^1.0.24",
+    "ng4-fittext": "^1.1.5",
     "rxjs": "^5.1.0",
     "stickyfill": "^1.1.1",
     "zone.js": "^0.8.4"
