--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "ng4-fittext": "^1.1.5",
     "rxjs": "^5.1.0",
     "stickyfill": "^1.1.1",
-    "zone.js": "^0.8.4"
+    "zone.js": "^0.8.4",
+    "aws-amplify": "^0.1.0"
   },
   "devDependencies": {
     "@angular/cli": "^1.3.0",
