--- a/package.json
+++ b/package.json
@@ -23,9 +23,13 @@
     "@angular/router": "^4.0.0",
     "angular-froala-wysiwyg": "^1.0.0",
     "angular2-token": "^0.2.0-beta.12",
+    "aws-amplify": "^0.1.0",
+    "aws-sdk": "^2.176.0",
     "bootstrap": "^4.0.0-alpha.6",
     "clamp": "^1.0.1",
     "core-js": "^2.4.1",
+    "cropperjs": "^1.2.1",
+    "crypto-js": "^3.1.9-1",
     "fullcalendar": "^3.4.0",
     "jquery": "^3.2.1",
     "line": "^0.1.8",
@@ -35,8 +39,7 @@
     "ng4-fittext": "^1.1.5",
     "rxjs": "^5.1.0",
     "stickyfill": "^1.1.1",
-    "zone.js": "^0.8.4",
-    "aws-amplify": "^0.1.0"
+    "zone.js": "^0.8.4"
   },
   "devDependencies": {
     "@angular/cli": "^1.3.0",
@@ -44,7 +47,7 @@
     "@angular/language-service": "^4.3.4",
     "@types/jasmine": "2.5.45",
     "@types/jquery": "^3.2.11",
-    "@types/node": "~6.0.60",
+    "@types/node": "^6.0.95",
     "codelyzer": "~3.0.1",
     "jasmine-core": "~2.6.2",
     "jasmine-spec-reporter": "~4.1.0",
