--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
   "dependencies": {
     "@angular/animations": "^4.0.0",
     "@angular/common": "^4.0.0",
-    "@angular/compiler": "^4.0.0",
-    "@angular/core": "^4.0.0",
+    "@angular/compiler": "^4.3.5",
+    "@angular/core": "^4.3.5",
     "@angular/forms": "^4.0.0",
     "@angular/http": "^4.0.0",
     "@angular/platform-browser": "^4.0.0",
@@ -39,6 +39,7 @@
     "ng4-fittext": "^1.1.5",
     "rxjs": "^5.1.0",
     "stickyfill": "^1.1.1",
+    "wysiwyg-editor-node-sdk": "^2.3.4-rc.1",
     "zone.js": "^0.8.4"
   },
   "devDependencies": {
