--- a/package.json
+++ b/package.json
@@ -12,20 +12,21 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^4.0.0",
-    "@angular/common": "^4.0.0",
-    "@angular/compiler": "^4.3.5",
-    "@angular/core": "^4.3.5",
-    "@angular/forms": "^4.0.0",
-    "@angular/http": "^4.0.0",
-    "@angular/platform-browser": "^4.0.0",
-    "@angular/platform-browser-dynamic": "^4.0.0",
-    "@angular/router": "^4.0.0",
+    "@angular/animations": "^5.2.11",
+    "@angular/common": "^5.2.11",
+    "@angular/compiler": "^5.2.11",
+    "@angular/core": "^5.2.11",
+    "@angular/forms": "^5.2.11",
+    "@angular/http": "^5.2.11",
+    "@angular/platform-browser": "^5.2.11",
+    "@angular/platform-browser-dynamic": "^5.2.11",
+    "@angular/platform-server": "^5.2.11",
+    "@angular/router": "^5.2.11",
     "angular-froala-wysiwyg": "^1.0.0",
-    "angular2-token": "^0.2.0-beta.12",
-    "aws-amplify": "^0.1.0",
-    "aws-sdk": "^2.176.0",
-    "bootstrap": "^4.0.0-alpha.6",
+    "angular2-token": "^0.2.0-beta.14",
+    "aws-amplify": "^0.4.1",
+    "aws-sdk": "^2.243.1",
+    "bootstrap": "^4.1.1",
     "clamp": "^1.0.1",
     "core-js": "^2.4.1",
     "cropperjs": "^1.2.1",
@@ -37,14 +38,15 @@
     "lodash": "^4.17.4",
     "ng2-fittext": "^1.0.24",
     "ng4-fittext": "^1.1.5",
-    "rxjs": "^5.1.0",
+    "rxjs": "^5.5.10",
     "stickyfill": "^1.1.1",
     "wysiwyg-editor-node-sdk": "^2.3.4-rc.1",
     "zone.js": "^0.8.4"
   },
   "devDependencies": {
-    "@angular/cli": "^1.3.0",
-    "@angular/compiler-cli": "^4.3.4",
+    "@angular-devkit/build-angular": "~0.6.3",
+    "@angular/cli": "^6.0.3",
+    "@angular/compiler-cli": "^5.2.11",
     "@angular/language-service": "^4.3.4",
     "@types/jasmine": "2.5.45",
     "@types/jquery": "^3.2.11",
@@ -65,9 +67,9 @@
     "karma-coverage-istanbul-reporter": "^1.2.1",
     "karma-jasmine": "~1.1.0",
     "karma-jasmine-html-reporter": "^0.2.2",
-    "protractor": "~5.1.2",
+    "protractor": "^5.3.2",
     "ts-node": "~3.0.4",
     "tslint": "~5.3.2",
-    "typescript": "~2.3.3"
+    "typescript": "^2.4.2"
   }
 }
