--- a/package.json
+++ b/package.json
@@ -76,5 +76,8 @@
     "ts-node": "~3.0.4",
     "tslint": "~5.3.2",
     "typescript": "^2.4.2"
+  },
+  "scripts": {
+    "postinstall": "ng build --aot -prod"
   }
 }
