--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "rxjs": "^5.5.10",
     "stickyfill": "^1.1.1",
     "util": "^0.10.4",
-    "wysiwyg-editor-node-sdk": "^2.3.4-rc.1",
+    // "wysiwyg-editor-node-sdk": "^2.3.4-rc.1",
     "zone.js": "^0.8.4"
   },
   "devDependencies": {
