--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "prod": "ng build --prod --output-hashing=none",
+    "heroku-postbuild": "npm run prod"
   },
   "private": true,
   "dependencies": {
@@ -78,8 +80,5 @@
     "ts-node": "~3.0.4",
     "tslint": "~5.3.2",
     "typescript": "^2.4.2"
-  },
-  "scripts": {
-    "heroku-postbuild": "ng build --prod"
   }
 }
